2020-05-12:
	* added consWriteLine() (kmw)